# MeedyaDL

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_STATUS.md  Project_Plan.md  README.md  __init__.py  cliff.toml  commitlint.config.js  constants.py  eslint.config.js  index.html  main.py  package-lock.json  package.json  postcss.config.js  release-please-config.json  requirements.txt  tailwind.config.js  test_utils.py  tsconfig.json  ui.py  utils.py  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  ProjectBrief_Chat.claude
.github/workflows/: build.yml  changelog.yml  check-pat.yml  ci.yml  release-please.yml  release.yml  version-bump.yml
gamdl-gui/: __init__.py  config.py  constants.py  main.py  ui.py  utils.py
help/: animated-artwork.md  cookie-management.md  downloading-music.md  downloading-videos.md  fallback-quality.md  faq.md  getting-started.md  index.md  lyrics-and-metadata.md  quality-settings.md  troubleshooting.md
scripts/: bump-version.mjs  generate-icons.mjs  update-copyright-year.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: artwork.rs  cookies.rs  credentials.rs  dependencies.rs  gamdl.rs  login_window.rs  mod.rs  settings.rs  system.rs  updates.rs
src-tauri/src/models/: dependency.rs  download.rs  gamdl_options.rs  mod.rs  music_service.rs  settings.rs
src-tauri/src/services/: animated_artwork_service.rs  config_service.rs  cookie_service.rs  dependency_manager.rs  download_queue.rs  gamdl_service.rs  login_window_service.rs  metadata_tag_service.rs  mod.rs  python_manager.rs  update_checker.rs
src-tauri/src/utils/: archive.rs  mod.rs  platform.rs  process.rs
src/components/common/: Button.test.tsx  Button.tsx  FilePickerButton.tsx  Input.test.tsx  Input.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  Modal.test.tsx  Modal.tsx  ProgressBar.test.tsx  ProgressBar.tsx  Select.test.tsx  Select.tsx  ToastContainer.tsx  Toggle.test.tsx  Toggle.tsx  Tooltip.tsx  UpdateBanner.tsx  index.ts
src/components/download/: DownloadForm.tsx  DownloadQueue.tsx  QueueItem.tsx  index.ts
src/components/help/: HelpViewer.tsx  index.ts
src/components/layout/: MainLayout.tsx  PageHeader.test.tsx  PageHeader.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  TitleBar.tsx  index.ts
src/components/settings/: SettingsPage.tsx  index.ts
src/components/settings/tabs/: AdvancedTab.tsx  CookiesTab.tsx  CoverArtTab.tsx  FallbackTab.tsx  GeneralTab.tsx  LyricsTab.tsx  PathsTab.tsx  QualityTab.tsx  TemplatesTab.tsx
src/components/setup/: SetupWizard.tsx  index.ts
src/components/setup/steps/: CompleteStep.tsx  CookiesStep.tsx  DependenciesStep.tsx  GamdlStep.tsx  PythonStep.tsx  WelcomeStep.tsx
src/hooks/: usePlatform.test.ts  usePlatform.ts  useTheme.test.ts  useTheme.ts
src/lib/: tauri-commands.ts  url-parser.test.ts  url-parser.ts
src/stores/: dependencyStore.ts  downloadStore.test.ts  downloadStore.ts  settingsStore.test.ts  settingsStore.ts  setupStore.ts  uiStore.test.ts  uiStore.ts  updateStore.ts
src/styles/: globals.css
src/styles/themes/: base.css  linux.css  macos.css  windows.css
src/test/: setup.ts
src/types/: index.ts
tests/: test_ui.py  test_utils.py
