# Copyright (c) 2024-2026 MWBM Partners Ltd
# Licensed under the MIT License. See LICENSE file in the project root.
#
# Cargo.toml -- Rust Package Manifest for gamdl-GUI Tauri Backend
# ================================================================
#
# This file defines the Rust package metadata and all dependencies for the
# Tauri 2.0 desktop application backend. The backend is responsible for:
#   - Managing the application window and system tray via Tauri
#   - IPC (Inter-Process Communication) between the React frontend and Rust
#   - Downloading and managing Python/GAMDL installations
#   - Executing GAMDL as a child process with progress monitoring
#   - Securely storing Apple Music credentials in the OS keychain
#   - Reading/writing application configuration and download queue state
#
# The frontend (React/TypeScript) communicates with this backend via Tauri's
# invoke() IPC mechanism. All heavy I/O (downloads, file operations, process
# management) happens here in Rust, keeping the UI thread responsive.
#
# Related config files:
#   - src-tauri/tauri.conf.json -- Tauri application config (window settings, permissions, bundling)
#   - src-tauri/build.rs       -- Tauri build script (invoked by tauri-build)
#   - package.json             -- npm scripts that invoke `cargo tauri dev` and `cargo tauri build`
#
# @see https://doc.rust-lang.org/cargo/reference/manifest.html -- Cargo manifest reference
# @see https://v2.tauri.app/develop/ -- Tauri 2.0 development guide
# @see https://v2.tauri.app/develop/calling-rust/ -- Tauri IPC (invoke) documentation

# ============================================================
# [package] -- Package identity and metadata
# ============================================================
# @see https://doc.rust-lang.org/cargo/reference/manifest.html#the-package-section
[package]
# name -- The crate name. Used as the binary name and in `cargo build` output.
name = "gamdl-gui"
# version -- Semantic version. Should stay in sync with tauri.conf.json "version" and package.json.
version = "0.1.3"
# description -- Short description shown on crates.io and in `cargo search` results.
description = "A multiplatform GUI for GAMDL (Apple Music downloader)"
# authors -- Package authors. Used in bundle metadata (installers, About dialogs).
authors = ["MWBM Partners Ltd"]
# license -- SPDX license identifier. MIT is permissive, allowing commercial and private use.
license = "MIT"
# repository -- URL to the source code. Included in bundle metadata and crates.io listings.
repository = "https://github.com/MWBM-Partners-Ltd/gamdl-GUI"
# edition -- Rust edition to use. 2021 enables let-else, edition-specific lints, and module changes.
# @see https://doc.rust-lang.org/edition-guide/editions/
edition = "2021"

# ============================================================
# [build-dependencies] -- Dependencies used only during compilation (build.rs)
# ============================================================
# @see https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#build-dependencies
[build-dependencies]

# tauri-build -- Tauri's build-time code generator.
# Runs in build.rs to generate Rust bindings for Tauri's IPC system,
# process the tauri.conf.json configuration, and set up platform-specific
# compilation flags. This is required for all Tauri 2.0 applications.
# @see https://v2.tauri.app/reference/rust/tauri_build/
tauri-build = { version = "2", features = [] }

# ============================================================
# [dependencies] -- Runtime dependencies linked into the final binary
# ============================================================
# @see https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies]

# ---- Tauri Framework & Plugins ----
# These provide the core application framework and platform-specific capabilities.
# Each plugin must also be registered in the Tauri app builder (main.rs) and may
# require permission declarations in tauri.conf.json.
# @see https://v2.tauri.app/develop/plugins/ -- Tauri plugin system overview

# tauri -- Core Tauri 2.0 framework. Provides the WebView window, IPC system,
# event bus, resource management, and application lifecycle.
# Feature "tray-icon": Enables system tray icon support (menu bar on macOS,
# notification area on Windows/Linux). Configured in tauri.conf.json "trayIcon".
# @see https://v2.tauri.app/reference/rust/tauri/
tauri = { version = "2", features = ["tray-icon", "devtools"] }

# tauri-plugin-shell -- Execute shell commands and manage child processes.
# Used to spawn the GAMDL Python process, capture stdout/stderr for progress
# monitoring, and handle process lifecycle (start/stop/kill).
# Must be enabled in tauri.conf.json plugins.shell configuration.
# @see https://v2.tauri.app/plugin/shell/
tauri-plugin-shell = "2"

# tauri-plugin-dialog -- Native file and folder picker dialogs.
# Used for "Browse" buttons (selecting download output directory, config file paths).
# Renders the OS-native dialog (NSOpenPanel on macOS, IFileDialog on Windows, GtkFileChooser on Linux).
# @see https://v2.tauri.app/plugin/dialog/
tauri-plugin-dialog = "2"

# tauri-plugin-fs -- File system access within Tauri's security scope.
# Allows reading/writing files from the application's allowed directories
# (app data, app config, user-selected paths). Enforces the principle of
# least privilege by restricting access to declared scopes.
# @see https://v2.tauri.app/plugin/file-system/
tauri-plugin-fs = "2"

# tauri-plugin-store -- Persistent key-value store for application settings.
# Stores settings like download directory, quality preferences, and UI state
# in a JSON file in the app data directory. Provides atomic writes and
# type-safe access from both Rust and JavaScript.
# @see https://v2.tauri.app/plugin/store/
tauri-plugin-store = "2"

# tauri-plugin-process -- Application process management.
# Provides exit() and restart() commands accessible from the frontend.
# Used for "Quit" menu items and self-update restart flows.
# @see https://v2.tauri.app/plugin/process/
tauri-plugin-process = "2"

# tauri-plugin-os -- Operating system and architecture detection.
# Returns the current OS (macos, windows, linux), architecture (aarch64, x86_64),
# and version information. Used by the frontend to:
#   - Apply the correct platform theme (macos.css, windows.css, linux.css)
#   - Download the correct Python/GAMDL binaries for the platform
# @see https://v2.tauri.app/plugin/os/
tauri-plugin-os = "2"

# ---- Serialization ----
# Required for converting data between Rust structs and JSON for IPC communication
# with the React frontend, as well as reading/writing config files.

# serde -- The de facto Rust serialization framework. The "derive" feature enables
# #[derive(Serialize, Deserialize)] on structs, which is used on virtually every
# data structure that crosses the IPC boundary or is persisted to disk.
# @see https://serde.rs/ -- Serde documentation
# @see https://doc.rust-lang.org/cargo/reference/features.html -- Cargo features
serde = { version = "1", features = ["derive"] }

# serde_json -- JSON serialization/deserialization using serde.
# Tauri's IPC protocol uses JSON for all command arguments and return values.
# Also used for reading/writing the plugin-store JSON files and parsing
# GAMDL's JSON output format.
# @see https://docs.rs/serde_json/ -- serde_json API reference
serde_json = "1"

# ---- Async Runtime ----

# tokio -- The async runtime powering all concurrent I/O in the application.
# The "full" feature enables all Tokio capabilities:
#   - tokio::time (sleep, timeout, interval) -- for download timeouts and polling
#   - tokio::io (AsyncRead, AsyncWrite) -- for streaming file downloads
#   - tokio::sync (Mutex, RwLock, mpsc) -- for thread-safe state management
#   - tokio::process -- for async child process spawning
#   - tokio::fs -- for non-blocking file operations
#   - #[tokio::main] and tokio::spawn macros -- for async entry points
#
# Tauri 2.0 uses Tokio internally, so we share the same runtime instance.
# @see https://tokio.rs/ -- Tokio documentation
tokio = { version = "1", features = ["full"] }

# ---- HTTP Client ----

# reqwest -- High-level HTTP client built on hyper and tokio.
# Used for downloading:
#   - Python standalone builds from GitHub releases
#   - GAMDL pip package
#   - Apple Music artwork and metadata
#
# Features:
#   - "stream": Enables response body streaming (reqwest::Response::bytes_stream()),
#     which is essential for download progress reporting. Without this, the entire
#     response body would be buffered in memory before being accessible.
#   - "json": Enables .json() method for deserializing JSON responses directly
#     into serde structs (used for GitHub API responses, Apple Music API).
#
# @see https://docs.rs/reqwest/ -- reqwest API reference
reqwest = { version = "0.12", features = ["stream", "json"] }

# ---- Archive Extraction ----
# These three crates work together to extract downloaded tool archives.

# zip -- ZIP archive extraction library.
# Used on Windows where tools are distributed as .zip files.
# Supports deflate, bzip2, and zstd compression methods.
# @see https://docs.rs/zip/ -- zip crate documentation
zip = "2"

# flate2 -- GZIP/DEFLATE compression and decompression.
# Used in combination with the tar crate to decompress .tar.gz archives,
# which is the standard format for tool distributions on macOS and Linux.
# Uses the miniz_oxide pure-Rust backend by default.
# @see https://docs.rs/flate2/ -- flate2 API reference
flate2 = "1"

# tar -- TAR archive reading and writing.
# Paired with flate2 to extract .tar.gz archives:
#   let tar_gz = File::open("archive.tar.gz")?;
#   let tar = GzDecoder::new(tar_gz);
#   let mut archive = Archive::new(tar);
#   archive.unpack(dest_dir)?;
# @see https://docs.rs/tar/ -- tar crate documentation
tar = "0.4"

# ---- Configuration ----

# configparser -- INI-style configuration file parser.
# GAMDL (the Python CLI tool) uses an INI-format config.ini file for settings
# like codec preferences, download paths, and Apple Music cookies.
# This crate reads and writes that config file from Rust, allowing the GUI
# to manage GAMDL's configuration without spawning a Python process.
# @see https://docs.rs/configparser/ -- configparser API reference
configparser = "3"

# ---- Secure Credential Storage ----

# keyring -- Cross-platform credential storage using the OS-native keychain.
# Stores sensitive data (Apple Music cookies, authentication tokens) securely
# instead of in plain-text config files.
#
# Platform backends (controlled by feature flags):
#   - "apple-native":   macOS Keychain Services (Security.framework)
#   - "windows-native": Windows Credential Manager (wincred.h)
#   - "linux-native":   Linux Secret Service API (via D-Bus, works with GNOME Keyring, KWallet)
#
# All three features are enabled so the correct backend is compiled per platform.
# @see https://docs.rs/keyring/ -- keyring crate documentation
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# ---- Unique Identifiers ----

# uuid -- UUID generation for uniquely identifying entities in the application.
# Feature "v4" enables random UUID generation (UUIDv4), used for:
#   - Download queue item IDs (each download gets a unique tracking ID)
#   - Temporary file names (prevent collisions during parallel downloads)
# @see https://docs.rs/uuid/ -- uuid crate documentation
uuid = { version = "1", features = ["v4"] }

# ---- Date/Time ----

# chrono -- Date and time library with timezone support.
# Used for:
#   - Parsing cookie expiration timestamps from Apple Music cookies
#   - Formatting timestamps in download history and logs
#   - Calculating time-based UI displays (e.g., "downloaded 5 minutes ago")
#
# Feature "serde" enables #[derive(Serialize, Deserialize)] for chrono types,
# allowing dates to be included in IPC responses and persisted state.
# @see https://docs.rs/chrono/ -- chrono documentation
chrono = { version = "0.4", features = ["serde"] }

# ---- Logging ----

# log -- The standard Rust logging facade (trait-based).
# Provides the log::info!(), log::warn!(), log::error!(), log::debug!() macros
# used throughout the application. The actual log output is handled by the
# env_logger backend (see below).
# @see https://docs.rs/log/ -- log facade documentation
log = "0.4"

# env_logger -- Logger implementation that reads the RUST_LOG environment variable.
# Configures which log levels and modules to display. Examples:
#   RUST_LOG=debug        -- Show all debug and above
#   RUST_LOG=gamdl_gui=trace,tauri=warn -- Verbose app logs, quiet Tauri logs
# Outputs to stderr with timestamps, module paths, and colored levels in dev.
# @see https://docs.rs/env_logger/ -- env_logger documentation
env_logger = "0.11"

# ---- Error Handling ----

# thiserror -- Derive macro for creating custom error types.
# Generates Display and std::error::Error implementations from enum variants:
#   #[derive(thiserror::Error, Debug)]
#   enum AppError {
#       #[error("Download failed: {0}")]
#       DownloadFailed(String),
#       #[error("IO error: {0}")]
#       Io(#[from] std::io::Error),
#   }
# This pattern is used for all domain-specific error types in the application.
# @see https://docs.rs/thiserror/ -- thiserror documentation
thiserror = "2"

# ---- Platform Directories ----

# dirs -- Cross-platform resolution of well-known directories.
# Returns OS-appropriate paths for:
#   - dirs::data_dir()   -- ~/Library/Application Support (macOS), %APPDATA% (Windows), ~/.local/share (Linux)
#   - dirs::config_dir() -- ~/Library/Preferences (macOS), %APPDATA% (Windows), ~/.config (Linux)
#   - dirs::cache_dir()  -- ~/Library/Caches (macOS), %LOCALAPPDATA% (Windows), ~/.cache (Linux)
# Used to determine where to store GAMDL's Python environment, config, and cached data.
# @see https://docs.rs/dirs/ -- dirs crate documentation
dirs = "6"

# ---- Regex ----

# regex -- Regular expression engine for text parsing.
# Used for:
#   - Parsing GAMDL's stdout output to extract download progress percentages
#   - Validating and extracting IDs from Apple Music URLs
#     (e.g., https://music.apple.com/us/album/song-name/123456789?i=987654321)
#   - Parsing version strings from Python and GAMDL output
# @see https://docs.rs/regex/ -- regex crate documentation
# @see https://docs.rs/regex/latest/regex/#syntax -- Supported regex syntax
regex = "1"

# ---- Browser Cookie Extraction ----

# rookie -- Cross-platform browser cookie extraction library.
# Reads cookies directly from installed browsers' local storage:
#   - Chromium-based (Chrome, Edge, Brave, Opera, Vivaldi): decrypts cookies
#     using OS-specific key storage (macOS Keychain, Windows DPAPI, Linux Secret Service)
#   - Firefox: reads from SQLite cookies database
#   - Safari (macOS only): parses Apple's binary cookie format
#
# Used by the automated cookie import feature to extract Apple Music
# authentication cookies without requiring the user to manually install
# a browser extension and export a file. Only cookies matching Apple Music
# domains (apple.com, mzstatic.com) are extracted.
#
# @see https://docs.rs/rookie/ -- rookie crate documentation
rookie = "0.5"
